Fix class name, extra space

--- a/src/Views/Solvers/WordSearch.css
+++ b/src/Views/Solvers/WordSearch.css
@@ -1,3 +1,3 @@
-.helpText {
+.WordSearch-helpText {
   text-align: center;
 }
